# PfQMC

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main  main.cpp  main_test.cpp
.github/workflows/: main.yml
doc/: DMRG-spinless-tV.ipynb  data.ipynb  honeycomb.ipynb  kitaev-chain.ipynb  signAve  symmetry-projected-correlation.ipynb
doc/data/: data_L10-40_V2.0-6.0-0.1_len160k.pkl  data_L10-50_V3.5-4.8-0.1_len160k.pkl  data_L34-50_V3.5-4.8-0.1_len160k.pkl  data_L8-14_V1.0-6.5_len160k_RG.pkl  data_L8-14_V4.0-5.0-0.1_len320k.pkl  data_L8-18_V1.0-7.0_len832k+.pkl  data_honeycomb_L6-15_V1.0-2.0_Ltau100_len16k.pkl  data_honeycomb_L6-15_V1.0-2.0_Ltau200_len16k.pkl  data_honeycomb_L6-15_V1.0-2.0_len16k-new.pkl  data_honeycomb_L6-15_V1.0-2.0_len16k.pkl
inc/: honeycomb.h  kitaevChain.h  operator.h  pfqmc.h  qr_udt.h  singleMajoranaHoneycomb.h  skewMatUtils.h  spinless_tV.h  square.h  types.h
inc/pfapack/c_interface/: makefile
inc/pfapack/c_interface/EXAMPLES/: a.d  makefile
inc/pfapack/c_interface/TESTING/: makefile
inc/pfapack/fortran/: makefile
inc/pfapack/fortran/EXAMPLES/: makefile
inc/pfapack/fortran/TESTING/: makefile  matrix_tools_c.f90  matrix_tools_d.f90  matrix_tools_s.f90  matrix_tools_z.f90
src/: main.cpp  operator.cpp  pfqmc.cpp  skewMatUtils.cpp  skewMatUtils.h  types.h
test/: main_test.cpp  squareLatticeTest.cpp
